# mach2

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-BSD  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml  release.yml  zizmor.yml
ci/: run.sh
examples/: dump_process_registers.rs
mach-test/: Cargo.toml  build.rs
mach-test/test/: main.rs
src/: boolean.rs  bootstrap.rs  clock.rs  clock_priv.rs  clock_reply.rs  clock_types.rs  dyld.rs  dyld_images.rs  dyld_kernel.rs  error.rs  exc.rs  exception_types.rs  kern_return.rs  lib.rs  libproc.rs  loader.rs  mach_init.rs  mach_port.rs  mach_time.rs  mach_types.rs  mach_voucher_types.rs  memory_object_types.rs  message.rs  mig.rs  ndr.rs  nlist.rs  notify.rs  policy.rs  port.rs  semaphore.rs  structs.rs  sync_policy.rs  task.rs  task_info.rs  task_inspect.rs  task_special_ports.rs  thread_act.rs  thread_policy.rs  thread_special_ports.rs  thread_state.rs  (+15 more)
src/mach_debug/: ipc_info.rs  mod.rs  zone_info.rs
