[package]
name = "machx"
version = "0.4.4"
license = "BSD-2-Clause OR MIT OR Apache-2.0"
description = "A Rust interface to the user-space API of the Mach 3.0 kernel that underlies OSX."
repository = "https://github.com/kekeimiku/machx"
readme = "README.md"
keywords = ["kernel", "macos", "darwin"]
categories = ["api-bindings", "external-ffi-bindings", "no-std", "os"]
edition = "2021"
include = ["src/**/*", "LICENSE-*", "README.md"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = { version = "0.2", default-features = false }
